--- a/My_Project_dotNET/Views/Quiz/QuizList.cshtml
+++ b/My_Project_dotNET/Views/Quiz/QuizList.cshtml
@@ -1,4 +1,7 @@
-﻿<div class="pagetitle">
+﻿@model DataTable
+@using System.Data
+
+<div class="pagetitle">
     <h1>Quiz List</h1>
     <nav>
         <ol class="breadcrumb">
@@ -105,46 +108,34 @@
                     <th>Quiz Name</th>
                     <th>Total Questions</th>
                     <th>Quiz Date</th>
+                    <th>User ID</th>
+                    <th>Created</th>
+                    <th>Modified</th>
                     <th>Action</th>
                 </tr>
             </thead>
             <tbody>
-                <tr>
-                    <td>ABCD Random</td>
-                    <td>10</td>
-                    <td>01-01-2025</td>
-                    <td>
-                        <button class="btn btn-outline-success"><i class="bi bi-pencil-fill"></i> Edit</button>
-                        <button class="btn btn-outline-danger"><i class="bi bi-x"></i> Delete</button>
-                    </td>
-                </tr>
-                <tr>
-                    <td>ABCD Random</td>
-                    <td>10</td>
-                    <td>01-01-2025</td>
-                    <td>
-                        <button class="btn btn-outline-success"><i class="bi bi-pencil-fill"></i> Edit</button>
-                        <button class="btn btn-outline-danger"><i class="bi bi-x"></i> Delete</button>
-                    </td>
-                </tr>
-                <tr>
-                    <td>ABCD Random</td>
-                    <td>10</td>
-                    <td>01-01-2025</td>
-                    <td>
-                        <button class="btn btn-outline-success"><i class="bi bi-pencil-fill"></i> Edit</button>
-                        <button class="btn btn-outline-danger"><i class="bi bi-x"></i> Delete</button>
-                    </td>
-                </tr>
-                <tr>
-                    <td>ABCD Random</td>
-                    <td>10</td>
-                    <td>01-01-2025</td>
-                    <td>
-                        <button class="btn btn-outline-success"><i class="bi bi-pencil-fill"></i> Edit</button>
-                        <button class="btn btn-outline-danger"><i class="bi bi-x"></i> Delete</button>
-                    </td>
-                </tr>
+                @foreach (DataRow row in Model.Rows)
+                {
+                    <tr>
+                        <td>@row["QuizName"]</td>
+                        <td>@row["TotalQuestions"]</td>
+                        <td>@row["QuizDate"]</td>
+                        <td>@row["UserID"]</td>
+                        <td>@row["Created"]</td>
+                        <td>@row["Modified"]</td>
+                        <td>
+                            <a asp-controller="Quiz" asp-action="QuizDelete" asp-route-QuizID="@row["QuizID"]"
+                               class="btn btn-outline-success" data-bs-toggle="tooltip" title="Edit">
+                                <i class="bi bi-pencil-fill"></i>Edit
+                            </a>
+                            <a asp-controller="Quiz" asp-action="QuizDelete" asp-route-QuizID="@row["QuizID"]"
+                               class="btn btn-outline-danger btn-xs" data-bs-toggle="tooltip" title="Delete">
+                                <i class="bi bi-x"></i>Delete
+                            </a>
+                        </td>
+                    </tr>
+                }
             </tbody>
         </table><!-- End of Table -->
     </div><!-- End of Table -->
