--- a/My_Project_dotNET/Views/User/UserList.cshtml
+++ b/My_Project_dotNET/Views/User/UserList.cshtml
@@ -78,7 +78,7 @@
                 {
                     <tr>
                         <td>@row["UserName"]</td>
-                        <td>@row["Mobile"]</td>
+                        <td>@row["Email"]</td>
                         <td>@row["IsActive"]</td>
                         <td>@row["Created"]</td>
                         <td>
