--- a/My_Project_dotNET/Views/User/Login.cshtml
+++ b/My_Project_dotNET/Views/User/Login.cshtml
@@ -48,6 +48,7 @@
                         <button type="submit" class="btn btn-primary w-100">Login</button>
                     </form>
                     <p class="text-center mt-3">Don't have an account? <a asp-area="" asp-controller="User" asp-action="Register" >Create an account</a></p>
+                    <p class="text-center mt-3">Login as <a asp-area="" asp-controller="Home" asp-action="Index">Guest</a></p>
                 </div>
             </div><!-- End Login Form -->
         </div>
