--- a/My_Project_dotNET/Views/Question/QuestionList.cshtml
+++ b/My_Project_dotNET/Views/Question/QuestionList.cshtml
@@ -91,6 +91,9 @@
             </div>
         </div>
     </div><!-- End of Search -->
+    <div class="row mb-3">
+        <span class="text-danger">@TempData["ErrorMessage"]</span>
+    </div>
     <div class="container mt-4 bg-white w-100 p-3 border border-dark border-1 rounded">
         <div class="row">
             <div class="col-sm-6">
