--- a/My_Project_dotNET/Views/Quiz/QuizList.cshtml
+++ b/My_Project_dotNET/Views/Quiz/QuizList.cshtml
@@ -114,6 +114,9 @@
             </div>
         </div>
     </div><!-- End of Search -->
+    <div class="container mt-4 bg-white w-100 border border-dark border-1 rounded">
+        <span class="text-danger">@TempData["Message"]</span>
+    </div><!-- End of Error Message -->
     <div class="container mt-4 bg-white w-100 p-3 border border-dark border-1 rounded">
         <div class="row">
             <div class="col-sm-6">
