--- a/My_Project_dotNET/Views/User/Login.cshtml
+++ b/My_Project_dotNET/Views/User/Login.cshtml
@@ -36,18 +36,18 @@
                 <div class="card p-4 shadow">
                     <h3 class="text-center">Login to Your Account</h3>
                     <p class="text-center text-muted">Enter your username & password to login</p>
-                    <form>
+                    <form method="post" asp-action="Login" asp-controller="User">
                         <div class="mb-3">
                             <label class="form-label">Username</label>
-                            <input type="text" class="form-control" placeholder="Enter Username">
+                            <input type="text" name="LoginIdentifier" class="form-control" placeholder="Enter Username, Email, or Mobile" required>
                         </div>
                         <div class="mb-3">
                             <label class="form-label">Password</label>
-                            <input type="password" class="form-control" placeholder="Enter Password">
+                            <input type="password" name="Password" class="form-control" placeholder="Enter Password" required>
                         </div>
                         <button type="submit" class="btn btn-primary w-100">Login</button>
                     </form>
-                    <p class="text-center mt-3">Don't have an account? <a asp-area="" asp-controller="User" asp-action="Register" >Create an account</a></p>
+                    <p class="text-center mt-3">Don't have an account? <a asp-area="" asp-controller="User" asp-action="Register">Create an account</a></p>
                     <p class="text-center mt-3">Login as <a asp-area="" asp-controller="Home" asp-action="Index">Guest</a></p>
                 </div>
             </div><!-- End Login Form -->
