--- a/My_Project_dotNET/Views/User/Register.cshtml
+++ b/My_Project_dotNET/Views/User/Register.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
     Layout = null;
 }
+
 @model My_Project_dotNET.Models.UserModel
 
 <!DOCTYPE html>
@@ -86,6 +87,9 @@
         </div>
     </div>
 
+    @section Scripts {
+        <partial name="_ValidationScriptsPartial" />
+    }
     <script src="~/assets/vendor/apexcharts/apexcharts.min.js"></script>
     <script src="~/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="~/assets/vendor/chart.js/chart.umd.js"></script>
