--- a/My_Project_dotNET/Views/Quiz/AddQuiz.cshtml
+++ b/My_Project_dotNET/Views/Quiz/AddQuiz.cshtml
@@ -1,4 +1,6 @@
-﻿<div class="pagetitle">
+﻿@model My_Project_dotNET.Models.QuizModel;
+
+<div class="pagetitle">
     <h1>Add Quiz</h1>
     <nav>
         <ol class="breadcrumb">
@@ -47,44 +49,52 @@
     <link href="~/assets/css/style.css" rel="stylesheet">
 
 </head>
-
 <body>
     <div class="d-flex justify-content-center align-items-center">
-        <!-- Quiz Form -->
-        <form class="bg-white w-100 p-3 border border-dark border-1 rounded">
-            <div class="row">
+        <form method="post" asp-controller="Quiz" asp-action="QuizAddEdit" class="bg-white w-100 p-3 border border-dark border-1 rounded">
+            <h3>Add Quiz</h3>
+            <hr />
+
+            <div class="row mb-3">
+                <label asp-for="QuizName" class="col-sm-3 col-form-label"><span class="text-danger">*</span>Quiz Name</label>
                 <div class="col-sm">
-                    <h3>Add Quiz</h3>
+                    <input asp-for="QuizName" class="form-control" placeholder="Enter Quiz Name">
+                    <span asp-validation-for="QuizName" class="text-danger"></span>
                 </div>
             </div>
+
             <div class="row mb-3">
-                <hr/>
-            </div>
-            <div class="row mb-3">
-                <label for="inputEmail3" class="col-sm-3 col-form-label"><span class="text-danger">*</span>Quiz Name</label>
+                <label asp-for="QuizDate" class="col-sm-3 col-form-label"><span class="text-danger">*</span>Quiz Date</label>
                 <div class="col-sm">
-                    <input type="text" class="form-control" id="inputText" placeholder="Enter Quiz Name">
+                    <input asp-for="QuizDate" class="form-control" type="date">
+                    <span asp-validation-for="QuizDate" class="text-danger"></span>
                 </div>
             </div>
+
             <div class="row mb-3">
-                <label for="inputEmail3" class="col-sm-3 col-form-label"><span class="text-danger">*</span>Quiz Date </label>
+                <label asp-for="UserID" class="col-sm-3 col-form-label"><span class="text-danger">*</span>User</label>
                 <div class="col-sm">
-                    <input type="date" class="form-control" id="inputText">
+                    <select asp-for="UserID" class="form-control" asp-items="@(new SelectList(ViewBag.UserList, "UserID", "UserName"))">
+                        <option value="">Select User</option>
+                    </select>
+                    <span asp-validation-for="UserID" class="text-danger"></span>
                 </div>
             </div>
+
             <div class="row mb-3">
-                <label for="inputEmail3" class="col-sm-3 col-form-label"><span class="text-danger">*</span>Total Questions </label>
+                <label asp-for="TotalQuestions" class="col-sm-3 col-form-label"><span class="text-danger">*</span>Total Questions</label>
                 <div class="col-sm">
-                    <input type="number" class="form-control" id="inputText" placeholder="0">
+                    <input asp-for="TotalQuestions" class="form-control" type="number" placeholder="Enter total questions">
+                    <span asp-validation-for="TotalQuestions" class="text-danger"></span>
                 </div>
             </div>
+
             <div class="text-center">
                 <button type="submit" class="btn btn-success">Save</button>
                 <button type="reset" class="btn btn-danger">Cancel</button>
             </div>
-        </form><!-- End Quiz Form -->
+        </form>
     </div>
-
     <!-- Vendor JS Files -->
     <script src="~/assets/vendor/apexcharts/apexcharts.min.js"></script>
     <script src="~/assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -97,7 +107,9 @@
 
     <!-- Template Main JS File -->
     <script src="~/assets/js/main.js"></script>
-
+    @section Scripts {
+        <partial name="_ValidationScriptsPartial" />
+    }
 </body>
 
 </html>
