--- a/My_Project_dotNET/Views/Shared/_ValidationScriptsPartial.cshtml
+++ b/My_Project_dotNET/Views/Shared/_ValidationScriptsPartial.cshtml
@@ -1,2 +1,10 @@
 ﻿<script src="~/lib/jquery-validation/dist/jquery.validate.min.js"></script>
 <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
+@* jQuery library *@
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
+@* jQuery Validation library *@
+<script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.min.js"></script>
+
+@* jQuery Unobtrusive Validation library *@
+<script src="https://cdn.jsdelivr.net/npm/jquery-validation-unobtrusive@3.2.12/dist/jquery.validate.unobtrusive.min.js"></script>
