--- a/My_Project_dotNET/Views/User/UserList.cshtml
+++ b/My_Project_dotNET/Views/User/UserList.cshtml
@@ -51,6 +51,7 @@
 </head>
 
 <body>
+    <span class="text-danger text-md-center">@TempData["ErrorMessage"]</span>
     <div class="container mt-4 bg-white w-100 p-3 border border-dark border-1 rounded">
         <div class="row">
             <div class="col-sm-6">
