--- a/My_Project_dotNET/Views/User/Login.cshtml
+++ b/My_Project_dotNET/Views/User/Login.cshtml
@@ -35,7 +35,7 @@
             <div class="col-md-4">
                 <div class="card p-4 shadow">
                     <h3 class="text-center">Login to Your Account</h3>
-                    <p class="text-center text-muted">Enter your Username, Email, or Mobile & password to login</p>
+                    <p class="text-center text-muted">Enter your Username & password to login</p>
                     @if (!string.IsNullOrEmpty(ViewBag.ErrorMessage))
                     {
                         <div class="alert alert-danger text-center">
